# ad-analyzer

./: .gitignore  README.md  pyproject.toml
ad_analyzer/: __init__.py  __main__.py  cli.py  config.py
ad_analyzer/analyzers/: __init__.py  acl_dangerous.py  admincount.py  base.py  dcsync.py  group_privilege.py
ad_analyzer/explain/: __init__.py  ollama.py  templates.py
ad_analyzer/graph/: __init__.py  build.py  queries.py
ad_analyzer/io/: __init__.py  load_json.py  strict_input.py  zip_safe.py
ad_analyzer/model/: __init__.py  normalize.py  types.py
ad_analyzer/report/: allowlist.py  diff.py  mitre.py  prioritize.py  render_csv.py  render_html.py  render_json.py  render_md.py  render_pdf.py
ad_analyzer/utils/: logging.py  timeit.py
demo/: run_presentation_demo.sh
tests/: test_analyzers.py  test_cli_commands.py  test_config.py  test_normalize.py  test_ollama.py  test_reporting_features.py  test_strict_input.py  test_zip_safe.py
