[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-analyzer"
version = "0.1.0"
description = "Blue Team AD Analyzer for SharpHound/BloodHound data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AD Analyzer Team" }]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "networkx>=3.3",
  "jinja2>=3.1.4",
  "reportlab>=4.4.0",
]

[project.scripts]
ad-analyzer = "ad_analyzer.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ad_analyzer*"]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]
